made more changes

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -1,6 +1,266 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VacationPy\n",
+    "----\n",
+    "\n",
+    "#### Note\n",
+    "* Instructions have been included for each segment. You do not have to follow them exactly, but they are included to help you think through the steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies and Setup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "import gmaps\n",
+    "import os\n",
+    "\n",
+    "# Import API key\n",
+    "from config2 import api_key"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Store Part I results into DataFrame\n",
+    "* Load the csv exported in Part I to a DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>clouds</th>\n",
+       "      <th>wind</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Escaldes-Engordany</td>\n",
+       "      <td>42.51</td>\n",
+       "      <td>38.48</td>\n",
+       "      <td>36</td>\n",
+       "      <td>40</td>\n",
+       "      <td>5.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Andorra la Vella</td>\n",
+       "      <td>42.50</td>\n",
+       "      <td>38.46</td>\n",
+       "      <td>36</td>\n",
+       "      <td>40</td>\n",
+       "      <td>5.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Umm al Qaywayn</td>\n",
+       "      <td>25.50</td>\n",
+       "      <td>69.69</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Ras al-Khaimah</td>\n",
+       "      <td>25.77</td>\n",
+       "      <td>68.22</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Dubai</td>\n",
+       "      <td>25.26</td>\n",
+       "      <td>71.29</td>\n",
+       "      <td>73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>555</td>\n",
+       "      <td>Yevlakh</td>\n",
+       "      <td>40.62</td>\n",
+       "      <td>41.00</td>\n",
+       "      <td>93</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>556</td>\n",
+       "      <td>Khachmaz</td>\n",
+       "      <td>41.47</td>\n",
+       "      <td>43.81</td>\n",
+       "      <td>77</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>557</td>\n",
+       "      <td>Ucar</td>\n",
+       "      <td>40.52</td>\n",
+       "      <td>41.00</td>\n",
+       "      <td>93</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>558</td>\n",
+       "      <td>Tǝrtǝr</td>\n",
+       "      <td>40.34</td>\n",
+       "      <td>44.60</td>\n",
+       "      <td>87</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>559</td>\n",
+       "      <td>Sumqayit</td>\n",
+       "      <td>40.59</td>\n",
+       "      <td>44.60</td>\n",
+       "      <td>87</td>\n",
+       "      <td>100</td>\n",
+       "      <td>23.04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>560 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   city    lat   temp  humidity  clouds   wind\n",
+       "0    Escaldes-Engordany  42.51  38.48        36      40   5.82\n",
+       "1      Andorra la Vella  42.50  38.46        36      40   5.82\n",
+       "2        Umm al Qaywayn  25.50  69.69        77       0   3.36\n",
+       "3        Ras al-Khaimah  25.77  68.22        77       0   3.36\n",
+       "4                 Dubai  25.26  71.29        73       0  10.29\n",
+       "..                  ...    ...    ...       ...     ...    ...\n",
+       "555             Yevlakh  40.62  41.00        93      90   3.36\n",
+       "556            Khachmaz  41.47  43.81        77     100   2.55\n",
+       "557                Ucar  40.52  41.00        93      90   3.36\n",
+       "558              Tǝrtǝr  40.34  44.60        87      90   4.70\n",
+       "559            Sumqayit  40.59  44.60        87     100  23.04\n",
+       "\n",
+       "[560 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_data = pd.read_csv(\"../WeatherPy/Weather_Data_Export.csv\")\n",
+    "weather_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Humidity Heatmap\n",
+    "* Configure gmaps.\n",
+    "* Use the Lat and Lng as locations and Humidity as the weight.\n",
+    "* Add Heatmap layer to map."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations = weather_data[[\"lat\", \"lng\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create new DataFrame fitting weather criteria\n",
+    "* Narrow down the cities to fit weather conditions.\n",
+    "* Drop any rows will null values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hotel Map\n",
+    "* Store into variable named `hotel_df`.\n",
+    "* Add a \"Hotel Name\" column to the DataFrame.\n",
+    "* Set parameters to search for hotels with 5000 meters.\n",
+    "* Hit the Google Places API for each city's coordinates.\n",
+    "* Store the first Hotel result into the DataFrame.\n",
+    "* Plot markers on top of the heatmap."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -13,6 +273,49 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOTE: Do not change any of the code in this cell\n",
+    "\n",
+    "# Using the template add the hotel marks to the heatmap\n",
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
+    "# Store the DataFrame Row\n",
+    "# NOTE: be sure to update with your DataFrame name\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in narrowed_city_df.iterrows()]\n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add marker layer ontop of heat map\n",
+    "\n",
+    "\n",
+    "# Display Map"
+   ]
   }
  ],
  "metadata": {
@@ -32,6 +335,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
